# 02-02-mtusy-netology

./: .env.example  README.md  pyproject.toml
prompts/: tech_support_system.jinja2
reports/: 120526.md
scripts/: chat_support.py  compare_fewshot_and_cot.py  product_eval_fewshots.py
src/: __init__.py  llm_config.py  product_fewshot_eval.py  prompt_service.py
tests/: conftest.py  test_deepseek_live.py  test_product_fewshot_eval.py  test_tech_support_prompt.py
